@@ -31,7 +31,6 @@ setup(name='Products.CMFPlacefulWorkflow',
           'zope.component',
           'zope.i18nmessageid',
           'zope.interface',
-          'Plone',
           'Products.CMFCore',
           'Products.GenericSetup',
           'Acquisition',
